Open smartcardio module for the richclient module